# RustCMakeStatic

cmtest/: Cargo.toml  build.rs
cmtest/include/: bridge.cpp
cmtest/src/: lib.rs  main.rs
cmtest/test-crate/: Cargo.toml  build.rs
cmtest/test-crate/include/: bridge.cpp
cmtest/test-crate/src/: main.rs
tinkwrap/: CMakeLists.txt
tinkwrap/src/: main.cpp
